# azathoth_logger

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  logger.rs
src/os/: linux.rs  mod.rs  windows.rs
