[package]
name = "azathoth_logger"
version = "0.1.2"
edition = "2024"
description = "Logger used by the AzathothC2 framework"
repository = "https://github.com/AzathothC2/azathoth_logger"
license = "MIT"

[dependencies]
azathoth_libload =  {version =  "0.1.3", features = ["hasher"] }
azathoth-utils = "0.1.2"
azathoth-core = "0.1.2"

